--- a/faq.html
+++ b/faq.html
@@ -15,33 +15,33 @@
   <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
   <link rel="stylesheet" href="faq.css">
   <link rel="stylesheet" href="jquery-ui.css">
-  <script src="java.js" defer ></script>
+  <script src="java.js" defer></script>
   <meta name="theme-color" content="#fafafa">
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
   <script src="jquery-ui.js"></script>
   <script>
     function openNav() {
-  document.getElementById("mySidenav").style.width = "250px";
-}
+      document.getElementById("mySidenav").style.width = "250px";
+    }
 
-function closeNav() {
-  document.getElementById("mySidenav").style.width = "0";
-}
+    function closeNav() {
+      document.getElementById("mySidenav").style.width = "0";
+    }
 
-$( function() {
-    $( ".button-containter" ).accordion({
-      collapsible: true
-});
-  } );
-
-</script>
+    $(function () {
+      $(".button-containter").accordion({
+        collapsible: true
+      });
+    });
+  </script>
 </head>
 
 <body>
   <nav class="stripe menubar">
     <div class="content_container">
       <ul>
-        <li style="float: left;"><img class="logo" src="images/logo.png"><span><a class="logo" href="index.html">Bonsai</a></span></li>
+        <li style="float: left;"><img class="logo" src="images/logo.png"><span><a class="logo"
+              href="index.html">Bonsai</a></span></li>
         <li><a href="information.html">INFORMATION</a></li>
         <li><a href="faq.html">FAQ</a></li>
         <li><a href="calculator.html">CALCULATOR</a></li>
@@ -54,7 +54,8 @@ $( function() {
         </li>
       </ul>
       <div class="topnav" id="myTopnav">
-        <img class="logo" src="images/logo.png" style="float: left;"><span><a class="logo" href="index.html">Bonsai</a></span>
+        <img class="logo" src="images/logo.png" style="float: left;"><span><a class="logo"
+            href="index.html">Bonsai</a></span>
         <a href="information.html">INFORMATION</a>
         <a href="faq.html">FAQ</a>
         <a href="calculator.html">CALCULATOR</a>
@@ -62,67 +63,85 @@ $( function() {
         <a href="contact.html">CONTACT US</a>
         <a href="javascript:void(0);" class="icon2" onclick="myFunction()"><i class="fa fa-bars"></i></a>
         <a class="icon1"><i class="fa fa-search"></i></a>
-      </ul>
-    </div>
-    </div>
-</nav>
-<div class="stripe introduction">
-  <div class="content_container">
-  <h1><b>FAQ</b></h1><br>
-  <h2>Explore cool fact about bonsai!</h2>
-</div>
-</div>
-
-<div class="stripe fact">
-  <div class="content_container">
-<div class="button-containter">
-  <h3 class="accordion">Bonsai Tree Care</h3>
-  <div class="panel bonsai-tree-care">
-      <p>Bonsai trees are planted in small pots with minimal water and nutrient reserves! In order to keep your Bonsai healthy you need to water and fertilize regularly. They require lots of water, light, and fertilizer in order to really thrive!</p>
-      <p>Determining where the best spot for your Bonsai is a tough task, however, there are many different factors that need to be taken into consideration such as the climate and time of year.</p>
-      <p>Watering is the most important part of taking care of your Bonsai but is often overlooked. How often your Bonsai needs water is determined by the size of the tree, size of its pot, the time of year, type of soil-mixture, and the local climate. </p>
-      <p>In order for your Bonsai to survive, fertilizing reguarly is cruical. </p></div>
-      <h3 class="accordion">Growing and Cultiviating</h3>
-      <div class="panel growing and cultiviating">
-          <p> When growing from a seed it takes at least five years of growing before your Bonsai will resemble a tree. Buying one from a nursey will result in you being able to style it right away!</p>
-          <p>If you chose to start your Bonsai growing journey it allowes you to expereince the fun of shaping your own tree! You can grow a Bonsai from either seeds, cuttings, or buying Bonsai nursery stock!</p>
-          <p>When just starting out you may want to opt for buying a Bondai tree so that you are able to foster your abilites to learn to care for this specific plant</p>
+        </ul>
       </div>
+    </div>
+  </nav>
+  <div class="stripe introduction">
+    <div class="content_container">
+      <h1><b>FAQ</b></h1><br>
+      <h2>Explore cool fact about bonsai!</h2>
+    </div>
+  </div>
+
+  <div class="stripe fact">
+    <div class="content_container">
+      <div class="button-containter">
+        <h3 class="accordion">Bonsai Tree Care</h3>
+        <div class="panel bonsai-tree-care">
+          <p>Bonsai trees are planted in small pots with minimal water and nutrient reserves! In order to keep your
+            Bonsai healthy you need to water and fertilize regularly. They require lots of water, light, and fertilizer
+            in order to really thrive!</p>
+          <p>Determining where the best spot for your Bonsai is a tough task, however, there are many different factors
+            that need to be taken into consideration such as the climate and time of year.</p>
+          <p>Watering is the most important part of taking care of your Bonsai but is often overlooked. How often your
+            Bonsai needs water is determined by the size of the tree, size of its pot, the time of year, type of
+            soil-mixture, and the local climate. </p>
+          <p>In order for your Bonsai to survive, fertilizing reguarly is cruical. </p>
+        </div>
+        <h3 class="accordion">Growing and Cultiviating</h3>
+        <div class="panel growing and cultiviating">
+          <p> When growing from a seed it takes at least five years of growing before your Bonsai will resemble a tree.
+            Buying one from a nursey will result in you being able to style it right away!</p>
+          <p>If you chose to start your Bonsai growing journey it allowes you to expereince the fun of shaping your own
+            tree! You can grow a Bonsai from either seeds, cuttings, or buying Bonsai nursery stock!</p>
+          <p>When just starting out you may want to opt for buying a Bondai tree so that you are able to foster your
+            abilites to learn to care for this specific plant</p>
+        </div>
 
 
-      <h3 class="accordion">Styling</h3>
-      <div class="panel styling">
-          <p>Bonsai trees are normal planets that are propagated like any other, however, they are trained using sophisicated techniques that keep them smaller.</p>
-          <p> The styping of Bonsai trees include methods such as regular pruning and wiring, while also including more advanced techniques like creation of deadwood!</p>
-      </div>
+        <h3 class="accordion">Styling</h3>
+        <div class="panel styling">
+          <p>Bonsai trees are normal planets that are propagated like any other, however, they are trained using
+            sophisicated techniques that keep them smaller.</p>
+          <p> The styping of Bonsai trees include methods such as regular pruning and wiring, while also including more
+            advanced techniques like creation of deadwood!</p>
+        </div>
 
-      <h3 class="accordion">Popular Tree Species</h3>
-      <div class="panel popular-tree-species">
-          <p>Each Bonsai tree has specific requirements for its training, cultivation, and care! Knowing which Bonsai tree you have will be crical in ensuring you are providing it with proper care!</p>
+        <h3 class="accordion">Popular Tree Species</h3>
+        <div class="panel popular-tree-species">
+          <p>Each Bonsai tree has specific requirements for its training, cultivation, and care! Knowing which Bonsai
+            tree you have will be crical in ensuring you are providing it with proper care!</p>
           <p>The most popular tree species are the Ficus and Juniper! </p>
           <p>
-      </div>
-      <h3 class="accordion">Best Bonsai for Beginners</h3>
-      <div class="panel best-bonsai-for-beginners">
-          <p>When picking your tree it is very important that you pick the correct species. Tropical and sub-tropical tree species can be kept indoors, however, temperature trees can only be grown outside.</p>
-          <p>Choice #1: Ficus! This is the most popular indoor Bonsai because it is a very resilent tree with very beautiful leaves!</p>
-          <p>Choice #2: Dwarf Jade! This is the easiest indoor Bonsai to take care of. The tree is a succulent, and can survive periods of drought due to it storing water in its leaves. </p>
-          <p>Choice #3: Juniper! This is the most popular outdoor Bonsai because it stands out against nature and it is very afforable for beginners.</p>
-          <p>Choice #4: Japanese Maple! This tree is known for its beautiful fall colors, but needs winter protection!</p>
-          <p>Overall, it comes down to where your Bonsai will be kept that impacts which one you should get! However, all of these are great options!</p>
+        </div>
+        <h3 class="accordion">Best Bonsai for Beginners</h3>
+        <div class="panel best-bonsai-for-beginners">
+          <p>When picking your tree it is very important that you pick the correct species. Tropical and sub-tropical
+            tree species can be kept indoors, however, temperature trees can only be grown outside.</p>
+          <p>Choice #1: Ficus! This is the most popular indoor Bonsai because it is a very resilent tree with very
+            beautiful leaves!</p>
+          <p>Choice #2: Dwarf Jade! This is the easiest indoor Bonsai to take care of. The tree is a succulent, and can
+            survive periods of drought due to it storing water in its leaves. </p>
+          <p>Choice #3: Juniper! This is the most popular outdoor Bonsai because it stands out against nature and it is
+            very afforable for beginners.</p>
+          <p>Choice #4: Japanese Maple! This tree is known for its beautiful fall colors, but needs winter protection!
+          </p>
+          <p>Overall, it comes down to where your Bonsai will be kept that impacts which one you should get! However,
+            all of these are great options!</p>
+        </div>
       </div>
     </div>
-</div>
-</div>
+  </div>
 
 
 
-<script>
+  <script>
     /* variables */
     var acc = document.getElementsByClassName("accordion");
     var i;
-  
-    /* Toggle between adding and removing the class "active". This interacts with the CSS to highlight the button that controls the panel 
+
+    /* Toggle between adding and removing the class "active". This interacts with the CSS to highlight the button that controls the panel
   
   for (i = 0; i < acc.length; i++) {
     acc[i].addEventListener("click", function() {
@@ -140,33 +159,33 @@ $( function() {
   </script>
 
 
-<div>
-<button onclick="topFunction()" id="top" title="Go to top">Top</button>
-<footer class="footer">
-  <div class="footer1">
-    <p class="logoend" href="home.html"><a>Bonsai</a></p>
-    <img class="logoend" src="images/logo.png">
-  </div>
-  <div class="footer2">
-    <p class="footer2">
-      Written by Kaia Nguyen, Khanh Mai, Ngoc Uong and Rachel Farver. <br>
-      At Miami University, Oxford, Ohio, USA. <br> 
-      &copy; Art of Bonsai, 2023
-    </p>
-  </div>
-</footer>
+  <div>
+    <button onclick="topFunction()" id="top" title="Go to top">Top</button>
+    <footer class="footer">
+      <div class="footer1">
+        <p class="logoend" href="home.html"><a>Bonsai</a></p>
+        <img class="logoend" src="images/logo.png">
+      </div>
+      <div class="footer2">
+        <p class="footer2">
+          Written by Kaia Nguyen, Khanh Mai, Ngoc Uong and Rachel Farver. <br>
+          At Miami University, Oxford, Ohio, USA. <br>
+          &copy; Art of Bonsai, 2023
+        </p>
+      </div>
+    </footer>
 </body>
 
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+<script src="js/vendor/modernizr-3.11.2.min.js"></script>
+<script src="js/plugins.js"></script>
+<script src="js/main.js"></script>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+<!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+<script>
+  window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+  ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
+</script>
+<script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
 
 </html>
