--- a/index.html
+++ b/index.html
@@ -15,67 +15,73 @@
   <link href='https://fonts.googleapis.com/css?family=Rozha One' rel='stylesheet'>
   <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="index.css">
-  <script src="java.js" defer ></script>
+  <script src="java.js" defer></script>
   <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
   <nav class="stripe menubar">
-      <div class="content_container">
-        <ul>
-          <li style="float: left;"><img class="logo" src="images/logo.png"><span><a class="logo" href="index.html">Bonsai</a></span></li>
-          <li><a href="information.html">INFORMATION</a></li>
-          <li><a href="faq.html">FAQ</a></li>
-          <li><a href="calculator.html">CALCULATOR</a></li>
-          <li><a href="gallery.html">GALLERY</a></li>
-          <li><a href="contact.html">CONTACT US</a></li>
-          <li></li>
-          <li></li>
-          <li>
-            <input type="text" placeholder="Search..">
-          </li>
-        </ul>
-        <div class="topnav" id="myTopnav">
-          <img class="logo" src="images/logo.png" style="float: left;"><span><a class="logo" href="index.html">Bonsai</a></span>
-          <a href="information.html">INFORMATION</a>
-          <a href="faq.html">FAQ</a>
-          <a href="calculator.html">CALCULATOR</a>
-          <a href="gallery.html">GALLERY</a>
-          <a href="contact.html">CONTACT US</a>
-          <a href="javascript:void(0);" class="icon2" onclick="myFunction()"><i class="fa fa-bars"></i></a>
-          <a class="icon1"><i class="fa fa-search"></i></a>
+    <div class="content_container">
+      <ul>
+        <li style="float: left;"><img class="logo" src="images/logo.png"><span><a class="logo"
+              href="index.html">Bonsai</a></span></li>
+        <li><a href="information.html">INFORMATION</a></li>
+        <li><a href="faq.html">FAQ</a></li>
+        <li><a href="calculator.html">CALCULATOR</a></li>
+        <li><a href="gallery.html">GALLERY</a></li>
+        <li><a href="contact.html">CONTACT US</a></li>
+        <li></li>
+        <li></li>
+        <li>
+          <input type="text" placeholder="Search..">
+        </li>
+      </ul>
+      <div class="topnav" id="myTopnav">
+        <img class="logo" src="images/logo.png" style="float: left;"><span><a class="logo"
+            href="index.html">Bonsai</a></span>
+        <a href="information.html">INFORMATION</a>
+        <a href="faq.html">FAQ</a>
+        <a href="calculator.html">CALCULATOR</a>
+        <a href="gallery.html">GALLERY</a>
+        <a href="contact.html">CONTACT US</a>
+        <a href="javascript:void(0);" class="icon2" onclick="myFunction()"><i class="fa fa-bars"></i></a>
+        <a class="icon1"><i class="fa fa-search"></i></a>
         </ul>
       </div>
-      </div>
+    </div>
   </nav>
-  <!--If you copy the menubar, make sure to copy all the tag in the css --> 
+  <!--If you copy the menubar, make sure to copy all the tag in the css -->
 
   <div class="stripe introduction">
     <div class="content_container">
-    <h1><b>Welcome to Bonsai<br> The art of Nature</b></h1>
-    <h2><i>An intro to the art of Bonsai, literally taking control of nature</i></h2>
-      <p class="intro_text">Bonsai is a community built by enthusiasts and experts from around the world. We introduce you to the fascinating and living art of Bonsai, and help you get started!</p>
+      <h1><b>Welcome to Bonsai<br> The art of Nature</b></h1>
+      <h2><i>An intro to the art of Bonsai, literally taking control of nature</i></h2>
+      <p class="intro_text">Bonsai is a community built by enthusiasts and experts from around the world. We introduce
+        you to the fascinating and living art of Bonsai, and help you get started!</p>
       <button class="learnmore">
         <a href="#overall">Learn more</a>
       </button>
-  </div>
+    </div>
   </div>
 
   <div class="stripe history" id="overall">
     <div class="content_container">
       <div class="overall">
         <h2>Information</h2>
-      <p class="overall">Bonsai is an inspirational art-form with a rich history. So we have put together this section with galleries, movies, top 10's and Japanese Bonsai trees for you to enjoy. There's so much more to bonsais than what meets the eye! Explore the history of these ancient trees or how to care for one right here in the ultimate bonsai guide!
-      </p>
-      <p class="overallblockquote">
-        Did you know that bonsai trees originated in China, NOT Japan?<br>
-        Or that they symbolize harmony and good luck in some cultures?<br>
-        Or that the oldest bonsai tree is over 1,000 years old?<br></p>
+        <p class="overall">Bonsai is an inspirational art-form with a rich history. So we have put together this section
+          with galleries, movies, top 10's and Japanese Bonsai trees for you to enjoy. There's so much more to bonsais
+          than what meets the eye! Explore the history of these ancient trees or how to care for one right here in the
+          ultimate bonsai guide!
+        </p>
+        <p class="overallblockquote">
+          Did you know that bonsai trees originated in China, NOT Japan?<br>
+          Or that they symbolize harmony and good luck in some cultures?<br>
+          Or that the oldest bonsai tree is over 1,000 years old?<br></p>
         <button class="information">
           <a href="information.html">Learn more</a>
         </button>
       </div>
-  </div>
+    </div>
   </div>
 
   <div class="stripe features">
@@ -85,39 +91,39 @@
         <div class="feature_item category1">
           <button>
             <a href="FAQ.html">
-            <h3>Bonsai tree care</h3>
-          </a>
+              <h3>Bonsai tree care</h3>
+            </a>
           </button>
         </div>
         <div class="feature_item category2">
           <button>
             <a href="FAQ.html">
-           <h3>Growing/cultivating</h3>
-         </a>
+              <h3>Growing/cultivating</h3>
+            </a>
           </button>
         </div>
         <div class="feature_item category3">
           <button>
             <a href="FAQ.html">
-           <h3>Styling</h3>
-         </a>
+              <h3>Styling</h3>
+            </a>
           </button>
         </div>
         <div class="feature_item category4">
           <button>
             <a href="FAQ.html">
-           <h3>Popular tree species</h3>
-         </a>
+              <h3>Popular tree species</h3>
+            </a>
           </button>
         </div>
         <div class="feature_item category5">
           <button>
             <a href="FAQ.html">
-           <h3>Bonsai for beginner</h3>
-         </a>
+              <h3>Bonsai for beginner</h3>
+            </a>
           </button>
         </div>
-    </div>
+      </div>
     </div>
   </div>
 
@@ -125,30 +131,30 @@
     <div class="content_container">
       <div class="content_container page_grid contents">
         <div class="content_item">
-            <h3>Tree Age Calculator</h3>
-            <hr>
+          <h3>Tree Age Calculator</h3>
+          <hr>
           <p class="content">Appreciate the age of the tree now through our tree age calculator!</p>
-            <button class="content_information">
-              <a href="calculator.html">Calculator</a>
-            </button>
+          <button class="content_information">
+            <a href="calculator.html">Calculator</a>
+          </button>
         </div>
         <div class="content_item">
           <h3>Gallery</h3>
           <hr>
           <p class="content">Enjoy the beauty of Bonsai through our gallery!</p>
-            <button class="content_information">
-              <a href="Gallery.html">Gallery</a>
-            </button>
+          <button class="content_information">
+            <a href="Gallery.html">Gallery</a>
+          </button>
         </div>
         <div class="content_item">
           <h3>Contact</h3>
           <hr>
           <p class="content">Want to know more about bonsai? Contact us for more information!</p>
-            <button class="content_information">
-              <a href="contactus.html">Contact</a>
-            </button>
+          <button class="content_information">
+            <a href="contactus.html">Contact</a>
+          </button>
         </div>
-    </div>
+      </div>
     </div>
   </div>
 
@@ -162,12 +168,12 @@
     <div class="footer2">
       <p class="footer2">
         Written by Kaia Nguyen, Khanh Mai, Ngoc Uong and Rachel Farver. <br>
-        At Miami University, Oxford, Ohio, USA. <br> 
+        At Miami University, Oxford, Ohio, USA. <br>
         &copy; Art of Bonsai, 2023
       </p>
     </div>
   </footer>
-  <!--If you copy the footer, make sure to copy all the tag in the css --> 
+  <!--If you copy the footer, make sure to copy all the tag in the css -->
 
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
