--- a/contact.html
+++ b/contact.html
@@ -15,80 +15,82 @@
   <link href='https://fonts.googleapis.com/css?family=Rozha One' rel='stylesheet'>
   <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="contact.css">
-  <script src="java.js" defer ></script>
+  <script src="java.js" defer></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
   <nav class="stripe menubar">
-      <div class="content_container">
-        <ul>
-          <li style="float: left;"><img class="logo" src="images/logo.png"><span><a class="logo" href="index.html">Bonsai</a></span></li>
-          <li><a href="information.html">INFORMATION</a></li>
-          <li><a href="faq.html">FAQ</a></li>
-          <li><a href="calculator.html">CALCULATOR</a></li>
-          <li><a href="gallery.html">GALLERY</a></li>
-          <li><a href="contactus.html">CONTACT US</a></li>
-          <li></li>
-          <li></li>
-          <li>
-            <input type="text" placeholder="Search..">
-          </li>
+    <div class="content_container">
+      <ul>
+        <li style="float: left;"><img class="logo" src="images/logo.png"><span><a class="logo"
+              href="index.html">Bonsai</a></span></li>
+        <li><a href="information.html">INFORMATION</a></li>
+        <li><a href="faq.html">FAQ</a></li>
+        <li><a href="calculator.html">CALCULATOR</a></li>
+        <li><a href="gallery.html">GALLERY</a></li>
+        <li><a href="contactus.html">CONTACT US</a></li>
+        <li></li>
+        <li></li>
+        <li>
+          <input type="text" placeholder="Search..">
+        </li>
+      </ul>
+      <div class="topnav" id="myTopnav">
+        <img class="logo" src="images/logo.png" style="float: left;"><span><a class="logo"
+            href="index.html">Bonsai</a></span>
+        <a href="information.html">INFORMATION</a>
+        <a href="faq.html">FAQ</a>
+        <a href="calculator.html">CALCULATOR</a>
+        <a href="gallery.html">GALLERY</a>
+        <a href="contactus.html">CONTACT US</a>
+        <a href="javascript:void(0);" class="icon2" onclick="myFunction()"><i class="fa fa-bars"></i></a>
+        <a class="icon1"><i class="fa fa-search"></i></a>
         </ul>
-        <div class="topnav" id="myTopnav">
-          <img class="logo" src="images/logo.png" style="float: left;"><span><a class="logo" href="index.html">Bonsai</a></span>
-          <a href="information.html">INFORMATION</a>
-          <a href="faq.html">FAQ</a>
-          <a href="calculator.html">CALCULATOR</a>
-          <a href="gallery.html">GALLERY</a>
-          <a href="contactus.html">CONTACT US</a>
-          <a href="javascript:void(0);" class="icon2" onclick="myFunction()"><i class="fa fa-bars"></i></a>
-          <a class="icon1"><i class="fa fa-search"></i></a>
-        </ul>
-        </div>
       </div>
-</nav>
+    </div>
+  </nav>
 
   <div class="stripe introduction">
     <div class="content_container">
-    <h1>Contact Us</h1>
-    <h2>Fill the form to add a new bonsai tree to our website</h2>
-  </div>
+      <h1>Contact Us</h1>
+      <h2>Fill the form to add a new bonsai tree to our website</h2>
+    </div>
   </div>
 
-<div class="stripe main">
- <!-- form input -->
-    <div class="content_container";>
+  <div class="stripe main">
+    <!-- form input -->
+    <div class="content_container" ;>
       <div class="container">
         <h1>Submission Form</h1>
         <form>
           <label for="name">Name:</label>
           <input type="text1" id="name" name="name" required>
-  
+
           <label for="email">Email:</label>
           <input type="email" id="email" name="email" required>
-  
+
           <label for="new-tree-name">New Bonsai Tree Name:</label>
           <input type="text1" id="new-tree-name" name="new-tree-name" required>
-  
+
           <label for="description">Description:</label>
           <textarea id="description" name="description" required></textarea>
-  
+
           <label for="related-resource">Related Resource (optional):</label>
           <input type="text1" id="related-resource" name="related-resource">
-          
+
           <!-- submit button -->
           <input type="submit" value="Submit">
         </form>
       </div>
-      </div>
     </div>
+  </div>
 
-<!-- top button -->
-<button onclick="topFunction()" id="top" title="Go to top">Top</button>
+  <!-- top button -->
+  <button onclick="topFunction()" id="top" title="Go to top">Top</button>
 
-<!-- footer -->
+  <!-- footer -->
   <footer class="footer">
     <div class="footer1">
       <p class="logoend" href="home.html"><a>Bonsai</a></p>
@@ -97,57 +99,57 @@
     <div class="footer2">
       <p class="footer2">
         Written by Kaia Nguyen, Khanh Mai, Ngoc Uong and Rachel Farver. <br>
-        At Miami University, Oxford, Ohio, USA. <br> 
+        At Miami University, Oxford, Ohio, USA. <br>
         &copy; Art of Bonsai, 2023
       </p>
     </div>
   </footer>
 
-<script>
+  <script>
 
-  $(document).ready(function() {
-  // Validate the form
-    $("form").validate({
-      rules: {
-        name: {
-          required: true
+    $(document).ready(function () {
+      // Validate the form
+      $("form").validate({
+        rules: {
+          name: {
+            required: true
+          },
+          email: {
+            required: true,
+            email: true
+          },
+          "new-tree-name": {
+            required: true
+          },
+          description: {
+            required: true
+          }
         },
-        email: {
-          required: true,
-          email: true
+        messages: {
+          name: "Please enter your name",
+          email: "Please enter a valid email address",
+          "new-tree-name": "Please enter the name of the new bonsai tree",
+          description: "Please enter a description"
         },
-        "new-tree-name": {
-          required: true
-        },
-        description: {
-          required: true
+        // Handle form submission
+        submitHandler: function (form) {
+          // Prevent default form submission
+          event.preventDefault();
+          // Get form data
+          const name = $("#name").val();
+          const email = $("#email").val();
+          const bonsaiName = $("#new-tree-name").val();
+          const description = $("#description").val();
+          const resource = $("#related-resource").val();
+          const formData = { name, email, bonsaiName, description, resource };
+          // Display success message
+          alert("Thank you for submitting! We will review your request shortly.");
+          // Clear the form
+          form.reset();
         }
-      },
-      messages: {
-        name: "Please enter your name",
-        email: "Please enter a valid email address",
-        "new-tree-name": "Please enter the name of the new bonsai tree",
-        description: "Please enter a description"
-      },
-      // Handle form submission
-      submitHandler: function(form) {
-        // Prevent default form submission
-        event.preventDefault();
-        // Get form data
-        const name = $("#name").val();
-        const email = $("#email").val();
-        const bonsaiName = $("#new-tree-name").val();
-        const description = $("#description").val();
-        const resource = $("#related-resource").val();
-        const formData = { name, email, bonsaiName, description, resource };
-        // Display success message
-        alert("Thank you for submitting! We will review your request shortly.");
-        // Clear the form
-        form.reset();
-      }
+      });
     });
-  });
-  
+
   </script>
 
 </body>
